add examples section styling

--- a/public/demo.html
+++ b/public/demo.html
@@ -32,6 +32,12 @@
     padding: 1rem;
     border-radius: 0px;
   }
+
+  .examples {
+    background: #dddddd;
+    padding: 1rem;
+    border-radius: 0px;
+  }
 </style>
 <h2>Tex(t Se)cret demo</h2>
 
