--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,24 @@
 <title>Tex(t Se)cret</title>
 <style>
   body {
-    font: 16px/1.4 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-    max-width: 700px;
+    align-items: center;
+    /* vertical centering */
+    justify-content: center;
+    /* horizontal centering */
+
+    font: 24px/1.4 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+
+    max-width: 95%;
     margin: 3rem auto;
+  }
+
+  /* Make all elements inherit font (form elements don’t by default) */
+  *,
+  input,
+  button,
+  textarea,
+  select {
+    font: inherit;
   }
 
   button {
@@ -93,13 +108,13 @@
     <label for="pt">Plaintext:</label>
   </p>
   <p>
-    <textarea name="pt" id="pt" value="" rows="3" cols="60">hello from the sea 🐬</textarea>
+    <textarea name="pt" id="pt" value="" rows="3" cols="59">hello from the sea 🐬</textarea>
   </p>
   <p>
     <label for="ct">Ciphertext (base64):</label>
   </p>
   <p>
-    <textarea name="ct" id="ct" value="" rows="6" cols="60"></textarea>
+    <textarea name="ct" id="ct" value="" rows="6" cols="59"></textarea>
   </p>
 </div>
 </p>
@@ -174,11 +189,13 @@
     Texcret.log = log;
 
     Texcret.setRPName("Tex(t Se)cret");
-    Texcret.setUser(userEmail, userName);
 
     let secretsLoaded = 0;
 
     async function doRegister() {
+      const userEmail = $("#user-email").value;
+      const userName = $("#user-name").value;
+      Texcret.setUser(userEmail, userName);
       await Texcret.registerNewCredentialAndLoadSecret(onSecretLoaded = () => {
         secretsLoaded += 1;
         $("#authState").textContent = "" + (secretsLoaded) + " secret(s): loaded (last from registration)";
@@ -187,6 +204,9 @@
     }
 
     async function doAuthenticate() {
+      const userEmail = $("#user-email").value;
+      const userName = $("#user-name").value;
+      Texcret.setUser(userEmail, userName);
       await Texcret.authenticateAndLoadSecret(onSecretLoaded = () => {
         secretsLoaded += 1;
         $("#authState").textContent = "" + (secretsLoaded) + " secret(s): loaded (last from authentication)";
