--- a/public/bridge.html
+++ b/public/bridge.html
@@ -48,7 +48,7 @@
     border-radius: 0px;
   }
 </style>
-<h2>Tex(t Se)cret demo</h2>
+<h2>Tex(t Se)cret - CLI Bridge</h2>
 
 <div class="user-data">
   <p>
