updat docs and ref info in htmls

--- a/public/bridge.html
+++ b/public/bridge.html
@@ -24,6 +24,10 @@
     font: inherit;
   }
 
+  .ref-info {
+    font: 12px/1.4 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+  }
+
   button {
     padding: .6rem 1rem;
     margin-right: .5rem;
@@ -49,6 +53,11 @@
   }
 </style>
 <h2>Tex(t Se)cret - CLI Bridge</h2>
+<div class="ref-info">
+  <p>
+    Check on <a href="https://github.com/aleksandr-vin/texcret">github</a>.
+  </p>
+</div>
 
 <div class="user-data">
   <p>
