--- a/public/demo.html
+++ b/public/demo.html
@@ -24,6 +24,10 @@
     font: inherit;
   }
 
+  .ref-info {
+    font: 12px/1.4 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+  }
+
   button {
     padding: .6rem 1rem;
     margin-right: .5rem;
@@ -55,6 +59,11 @@
   }
 </style>
 <h2>Tex(t Se)cret demo</h2>
+<div class="ref-info">
+  <p>
+    Check on <a href="https://github.com/aleksandr-vin/texcret">github</a>.
+  </p>
+</div>
 
 <p><button id="register">Register key + store secret</button> Register writes a secret into the key’s largeBlob</p>
 <p><button id="authenticate">Authenticate + read secret</button> Authenticate reads it and decrypts it</p>
